From Matt Thomas, suggested upstream:

* atof-generic.c (atof_generic): recognize snan and qnan in
	addition to nan and inf.
	* atof-vax.c (flonum_gen2vax): deal properly with nan, snan, qnan,
	and +Inf and -Inf codes.

This fixes PR toolchain/43303.